--- a/2017_speakers/_posts/2017-01-01-speaker-10.markdown
+++ b/2017_speakers/_posts/2017-01-01-speaker-10.markdown
@@ -1,17 +1,13 @@
 ---
-title: Mücahid Doğan
+title: Emir Çetin
 name: Name-10
-subtitle: Team Lead
+subtitle: Graphic Designer
 layout: 2017_default
 modal-id: 1
-img: mchd.jpg
-thumbnail: mchd.jpg
+img: emirc.jpg
+thumbnail: emirc.jpg
 alt: Picture of TBD
-topic: Topic
-website: http://mucahiddogan.com
-web_name: mucahiddogan.com
-twitter: http://twitter.com/mucahiddogan_
-github: http://github.com/mucahiddogan
-linkedin: http://tr.linkedin.com/in/mucahiddogan
+topic: topıc
+twitter: https://twitter.com/emirc52
 description: More Info
 ---
