--- a/2017_speakers/_posts/2017-01-01-speaker-09.markdown
+++ b/2017_speakers/_posts/2017-01-01-speaker-09.markdown
@@ -1,17 +1,12 @@
 ---
-title: Kerem Demirtürk
+title: Ali Tayyip
 name: Name-9
-subtitle: Co-Founder
+subtitle: Developer
 layout: 2017_default
 modal-id: 1
-img: kd.jpg
-thumbnail: kd.jpg
+img: alitayyip.jpg
+thumbnail: alitayyip.jpg
 alt: Picture of TBD
-topic: topic
-website: http://keremdemirtrk.com
-web_name: keremdemirtrk.com
-twitter: http://twitter.com/keremdemirtrk
-github: http://github.com/keremdemirtrk
-linkedin: http://tr.linkedin.com/in/kerem-demirt%C3%BCrk-73a48712b
+topic: topıc
 description: More Info
 ---
