--- a/2017_speakers/_posts/2017-01-01-speaker-08.markdown
+++ b/2017_speakers/_posts/2017-01-01-speaker-08.markdown
@@ -9,7 +9,7 @@ thumbnail: aysegul.jpg
 alt: Picture of TBD
 topic: Topic
 website:
-web_name:
+web_name: .
 twitter: http://twitter.com/aysegulsahin_
 github: http://github.com/aysegulsahin
 linkedin: http://tr.linkedin.com/in/aysegulsahin
