--- a/2017_speakers/_posts/2017-01-01-speaker-09.markdown
+++ b/2017_speakers/_posts/2017-01-01-speaker-09.markdown
@@ -9,7 +9,7 @@ thumbnail: yasin.jpg
 alt: Picture of TBD
 topic: Topic
 website:
-web_name:
+web_name: .
 twitter: https://twitter.com/koka_koala
 github: http://github.com/ysnacrk
 linkedin:
