--- a/2017_speakers/_posts/2017-01-01-speaker-11.markdown
+++ b/2017_speakers/_posts/2017-01-01-speaker-11.markdown
@@ -8,6 +8,8 @@ img: emirc.jpg
 thumbnail: emirc.jpg
 alt: Picture of TBD
 topic: topıc
+website:
+web_name: . 
 twitter: https://twitter.com/emirc52
 description: More Info
 ---
