--- a/2017_speakers/_posts/2017-01-01-speaker-09.markdown
+++ b/2017_speakers/_posts/2017-01-01-speaker-09.markdown
@@ -1,7 +1,7 @@
 ---
 title: Yasin Acıerik
 name: Name-09
-subtitle: Front-end Developer
+subtitle: Önyüz Geliştirici
 layout: 2017_default
 modal-id: 1
 img: yasin.jpg
