--- a/2017_speakers/_posts/2017-01-01-speaker-15.markdown
+++ b/2017_speakers/_posts/2017-01-01-speaker-15.markdown
@@ -1,7 +1,7 @@
 ---
 title: Mücahid Doğan
 name: Name-15
-subtitle: Team Lead
+subtitle: Yönetim Kurulu Başkanı
 layout: 2017_default
 modal-id: 1
 img: mchd.jpg
