--- a/2017_speakers/_posts/2017-01-01-speaker-12.markdown
+++ b/2017_speakers/_posts/2017-01-01-speaker-12.markdown
@@ -1,7 +1,7 @@
 ---
 title: Ayşegül Şahin
 name: Name-12
-subtitle: Organizasyon Kurulu Başkanı
+subtitle: Etkinlik Org. Kurulu Başkanı
 layout: 2017_default
 modal-id: 1
 img: aysegul.jpg
