--- a/2017_speakers/_posts/2017-01-01-speaker-13.markdown
+++ b/2017_speakers/_posts/2017-01-01-speaker-13.markdown
@@ -1,7 +1,7 @@
 ---
 title: Sıla İkinci
 name: Name-13
-subtitle: Kulüp Genel Sekreteri
+subtitle: Yönetim Kurulu Başkan Yardımcısı
 layout: 2017_default
 modal-id: 1
 img: sila2.jpg
