--- a/2017_speakers/_posts/2017-01-01-speaker-09.markdown
+++ b/2017_speakers/_posts/2017-01-01-speaker-09.markdown
@@ -1,7 +1,7 @@
 ---
 title: Özge Budak
 name: Name-07
-subtitle: Etkinlik Organizasyon Kurulu Üyesi
+subtitle: Etkinlik ve Organizasyon Komitesi Üyesi
 layout: 2017_default
 modal-id: 1
 img: ozge.jpg
