taslak fotolar eklendi

--- a/2017_speakers/_posts/2017-01-01-speaker-08.markdown
+++ b/2017_speakers/_posts/2017-01-01-speaker-08.markdown
@@ -11,6 +11,7 @@ topic: Topic
 website: 
 web_name: .
 
+github: https://github.com/metehannbulut
 linkedin: https://tr.linkedin.com/in/metehanbulut
 description: More Info
 ---
