--- a/2017_speakers/_posts/2017-01-01-speaker-10.markdown
+++ b/2017_speakers/_posts/2017-01-01-speaker-10.markdown
@@ -1,7 +1,7 @@
 ---
 title: Boran Kırışoğlu
 name: Name-10
-subtitle: Sosyal Medya ve İletişim Koordinatörü
+subtitle: Etkinlik ve Organizasyon Komitesi Başkanı
 layout: 2017_default
 modal-id: 1
 img: boran.jpg
